[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ln-recommender"
version = "1.0.0"
description = "Generate accurate subtitles from audio, align existing subs to videos, generate your own Kindle's Immersion Reading like audiobook subs 📖🎧"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {file = "LICENSE"}

# Optional metadata
authors = [{name = "Gilfar"}]
keywords = ["generate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "sudachipy~=0.6.8",
    "sudachidict-full==20240409",
    "numpy~=1.26.4",
    "scikit_learn~=1.5.0",
    "pandas~=2.2.2",
    "scipy~=1.13.1",
    "catboost~=1.2.5",
    "beautifulsoup4~=4.12.3",
    "ebooklib~=0.18"
]

[tool.setuptools.packages.find]
include = ["ln_recommender"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)


[project.optional-dependencies]
dev = [
  "black==24.4.2",
  "ruff==0.4.8"
]

[project.scripts]
ln-recommender = "ln_recommender.__main__:main"


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
  )/
)
'''


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
fix = true

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
